--- a/css/mixin.scss
+++ b/css/mixin.scss
@@ -22,12 +22,35 @@ $upper:uppercase;
 $none:none;
 $around:space-around;
 $between:space-between;
+$inherit:inherit;
 $end:flex-end;
+$bld:bold;
+$blder:bolder;
+$rel:relative;
+$abs:absolute;
+$hide:hidden;
+$mid:center;
+$cover:cover;
+$no-rpt:no-repeat;
+$full: 100%;
 //-----font----//
 
 $heading:'AlegreyaRegular';
 $p:'RalewayRegular';
 $transition: all .3s ease-in-out;
+$Arimo:'Arimo';
+
+@mixin heading { 
+        font-size: 2.3em;
+        line-height: 1.5;
+        letter-spacing: 1px;
+        word-spacing: 1px;
+        text-transform: $cap;
+        font-weight: $bld;
+        span{
+            color: $red;
+        } 
+}
 
 
 @mixin imgBefore {
@@ -97,6 +120,106 @@ $transition: all .3s ease-in-out;
     z-index: -1;
     animation: imghvr 3s linear infinite;
 }
+
+// ----second---page---gallryyy--//
+@mixin  grid-Hvr-Second {
+    &:hover{
+        .grid-hvr-content{
+            opacity: 1;
+            transition: $transition;
+            .Hvr_cnt{
+                &::before{
+                    width: 90px;
+                    height: 90px;
+                    transition: all .5s ease-in-out;
+                }
+                &::after{
+                    width: 90px;
+                    height: 90px;
+                    transition: all .5s ease-in-out;
+                }
+            }
+        }
+        .bottom_Bar{
+           opacity: 0;
+            transition: $transition;
+        }
+     }
+     .grid-hvr-content{
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        @include flex;
+        background: #f736249c;
+        z-index: 4;
+        opacity: 0;
+        transition: $transition;
+        .Hvr_cnt{
+            text-align: center;
+            position: relative;
+            &::before{
+                content: '';
+                width: 0px;
+                height: 0px;
+                position: absolute;
+                left: 1px;
+                top: -63px;
+                border-top: 2px solid #fff;
+                border-left: 2px solid #fff;
+                transition: all .5s ease-in-out;
+            }
+            &::after{
+               content: '';
+               width: 0px;
+               height: 0px;
+               position: absolute;
+               right: 0px;
+               bottom: -63px;//-156px;
+               border-bottom: 2px solid #fff;
+               border-right: 2px solid #fff;
+               transition: all .5s ease-in-out;
+           }
+            h2{
+                font-size: 1.9em;
+                line-height: 1.5;
+                letter-spacing: 1px;
+                text-transform: $upper;
+                color: $white;
+            }
+            p{
+                font-size: 1em;
+               line-height: 1.5;
+               letter-spacing: 1px;
+               text-transform: $cap;
+               color: $white;
+               padding: 1rem 0;
+            }
+            a{
+                display: inline-block;
+                padding: .9rem 1.8rem;
+                border-radius: 5px;
+                background: #000000;
+                color: $white;
+                text-transform: $cap;
+                word-spacing: 1px;
+                letter-spacing: 1px;
+                z-index: 5;
+                &:hover{
+                    color: $red;
+                    transition: $transition;
+                    font-weight: bold;
+                }
+            }
+            .hvr-radial-out{
+               transition: $transition;
+               &::before{
+                   background: #fff;
+               }
+           }
+        }
+    }
+}
+// --end--here---//
 
 @mixin  grid-Hvr {
     &:hover{
